Разметка сетка Нёрдс.

--- a/catalog.html
+++ b/catalog.html
@@ -2,11 +2,12 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link href="css/style.css" rel="stylesheet">
     <title>Каталог</title>
   </head>
   <body>
-   <header class="main-header">
+   <header class="main-header-catalog">
       <div class="container">
          <nav class="main-navigation">
           <div class="index-logo">
@@ -21,13 +22,13 @@
             <li><a href="#">Контакты</a></li>             
           </ul>          
         </nav>
-        <h1>Добро пожаловать в магазин готовых макетов</h1>
         <div class="user-block">
           <a class="basket" href="#">Корзина</a>
-        </div>        
+        </div>  
+        <h1>Добро пожаловать в магазин готовых макетов</h1>              
       </div>
       </header> 
-    <main class="container">      
+    <main class="container clearfix">      
       <div class="catalog">
         <div class="catalog-filter">
           <b class="catalog-filter-title">Сортировать:</b>
