--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
           </div>   
        	</div>
-       	<section class="features">
+       	<section class="features clearfix">
        		<div class="features-item">
        		<div class="features-image">
        			<img src="img/index/Layer-1.jpg" width="290" height="124" alt="">
@@ -74,7 +74,7 @@
        			<a class="features-anchor" href="#">Заказать</a>
        		</div>
        	</section>
-       	<section class="about-company">
+       	<section class="about-company clearfix">
        		<div class="about-company-content">
        			<div class="about-company-content-left">
        				<span class="slogan">Мы-мальнькая,но гордая<br>
@@ -89,7 +89,7 @@
        				</div>
        			</div>
        		</div>
-       		<div class="aside">       			
+       		<div class="aside clearfix">       			
        			<div class="aside-content-left">
        				<h2 class="aside-content-title">Выполняем заказы на разработку:</h2>
        				<ul>
@@ -109,7 +109,7 @@
        			</div>       		
        		</div>
        	</section>
-      <div class="gallery">
+      <div class="gallery ">
       	<ul class="gallery-list">
       		<li class="gallery-item">
       			<a href="#"><img src="img/index/partner-1.png" width="198" height="37" alt=""></a></li>      		
@@ -129,9 +129,8 @@
       		тел.+7(812)275-75-75
       		</section>
       </div>
-
     </main>
-    <footer class="main-footer">
+    <footer class="main-footer clearfix">
       <div class="container">      	
       		<div class="footer-content-left">
       			<div class="footer-content-social">
