Внесение правок в разметку сетки

--- a/catalog.html
+++ b/catalog.html
@@ -2,136 +2,130 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link href="css/style.css" rel="stylesheet">
     <title>Каталог</title>
   </head>
   <body>
-   <header class="main-header-catalog">
+    <header class="main-header-catalog">
       <div class="container">
-         <nav class="main-navigation">
+        <nav class="main-navigation">
           <div class="index-logo">
             <a href="#">
-             <img src="img/index/logo-11.jpg" width="139" height="56" alt="Логотип">
-          </a>
+            <img src="img/index/logo-11.jpg" width="139" height="56" alt="Логотип">
+            </a>
           </div>
           <ul>
-            <li><a href="#">Студия</a></li>             
-            <li><a href="#">Клиенты</a></li>             
-            <li><a href="#">Магазин</a></li>             
-            <li><a href="#">Контакты</a></li>             
-          </ul>          
+            <li><a href="#">Студия</a></li>
+            <li><a href="#">Клиенты</a></li>
+            <li><a href="#">Магазин</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
         </nav>
         <div class="user-block">
           <a class="basket" href="#">Корзина</a>
-        </div>  
-        <h1>Добро пожаловать в магазин готовых макетов</h1>              
+        </div>
+        <h1>Добро пожаловать в магазин готовых макетов</h1>
       </div>
-      </header> 
-    <main class="container clearfix">      
+    </header>
+    <main class="container clearfix">
       <div class="catalog">
         <div class="catalog-filter">
           <b class="catalog-filter-title">Сортировать:</b>
           <ul>
-          <li><a href="#">По цене</a></li>
-          <li><a href="#">По типу</a></li>
-          <li><a href="#">По функционалу</a></li>
-        </ul>
-        <a href="#" class="filter filter-up"></a>        
-        <a href="#" class="filter filter-down"></a>
+            <li><a href="#">По цене</a></li>
+            <li><a href="#">По типу</a></li>
+            <li><a href="#">По функционалу</a></li>
+          </ul>
+          <a href="#" class="filter filter-up"></a>        
+          <a href="#" class="filter filter-down"></a>
         </div>
-          <article class="catalog-item">
-            <figure class="catalog-content">
-               <img src="img/catalog/items-1.jpg" width="240" height="270" alt="">
-            </figure>
-          </article>
-
-           <article class="catalog-item">
-            <figure class="catalog-content">
-              <img src="img/catalog/items-2.jpg" width="240" height="270" alt="">
-            </figure>
-          </article>
-
-           <article class="catalog-item">
-            <figure class="catalog-content">
-              <img src="img/catalog/items-3.jpg" width="240" height="270" alt="">
-            </figure>
-          </article>
-
-           <article class="catalog-item">
-            <figure class="catalog-content">
-              <img src="img/catalog/items-4.jpg" width="240" height="270" alt="">
-            </figure>
-          </article>
-
-           <article class="catalog-item">
-            <figure class="catalog-content">
-              <img src="img/catalog/items-5.jpg" width="240" height="270" alt="">
-            </figure>
-          </article>
-
-           <article class="catalog-item">
-            <figure class="catalog-content">
-              <img src="img/catalog/items-6.jpg" width="240" height="270" alt="">
-            </figure>
-          </article>
-          <div class="catalog-pagination">  
+        <article class="catalog-item">
+          <div class="catalog-content">
+            <img src="img/catalog/items-1.jpg" width="240" height="240" alt="">
+          </div>
+        </article>
+        <article class="catalog-item">
+          <div class="catalog-content">
+            <img src="img/catalog/items-2.jpg" width="240" height="240" alt="">
+          </div>
+        </article>
+        <article class="catalog-item">
+          <div class="catalog-content">
+            <img src="img/catalog/items-3.jpg" width="240" height="240" alt="">
+          </div>
+        </article>
+        <article class="catalog-item">
+          <div class="catalog-content">
+            <img src="img/catalog/items-4.jpg" width="240" height="240" alt="">
+          </div>
+        </article>
+        <article class="catalog-item">
+          <div class="catalog-content">
+            <img src="img/catalog/items-5.jpg" width="240" height="240" alt="">
+          </div>
+        </article>
+        <article class="catalog-item">
+          <div class="catalog-content">
+            <img src="img/catalog/items-6.jpg" width="240" height="240" alt="">
+          </div>
+        </article>
+        <div class="catalog-pagination">  
           <a href="#" class="catalog-btn" >1</a>
-           <a href="#" class="catalog-btn" >2</a>
-            <a href="#" class="catalog-btn" >3</a>
-             <a href="#" class="catalog-btn" >Следующая</a>
-           </div>
+          <a href="#" class="catalog-btn" >2</a>
+          <a href="#" class="catalog-btn" >3</a>
+          <a href="#" class="catalog-btn" >Следующая</a>
+        </div>
       </div>
-       <div class="sidebar">
+      <div class="sidebar">
         <form action="#" method="post">
           <fieldset>
             <legend class="sidebar-title">Стоимость:</legend>
-          <input type="range" name="range">
-          от 0 до 15000
-        </fieldset>
-        <fieldset>
-          <legend class="sidebar-title">Сетка:</legend>
-          <label for="grid-item-1">Адаптивная</label>
-          <input type="radio" name="grid" value="Адаптивная" id="grid-item-1">
-           <label for="grid-item-2">Фиксированная</label>
-          <input type="radio" name="grid" value="Фиксированная" id="grid-item-2">
-           <label for="grid-item-3">Резиновая</label>
-          <input type="radio" name="grid" value="Резиновая" id="grid-item-3">
-        </fieldset>
-        <fieldset>
-          <legend class="sidebar-title">Особенности:</legend>
-          <label for="features-item-1">Слайдер</label>
-          <input type="checkbox" name="features" id="features-item-1">
-          <label for="features-item-2">Блок приемуществ</label>
-          <input type="checkbox" name="features" id="features-item-2">
-          <label for="features-item-3">Новости</label>
-          <input type="checkbox" name="features" id="features-item-3">
-          <label for="features-item-4">Галерея</label>
-          <input type="checkbox" name="features" id="features-item-4">
-          <label for="features-item-5">Корзина</label>
-          <input type="checkbox" name="features" id="features-item-5">
-        </fieldset>
-        <button type="submit" class="sidebar-btn">Показать</button>
+            <input type="range" name="range">
+            от 0 до 15000
+          </fieldset>
+          <fieldset>
+            <legend class="sidebar-title">Сетка:</legend>
+            <label for="grid-item-1">Адаптивная</label>
+            <input type="radio" name="grid" value="Адаптивная" id="grid-item-1">
+            <label for="grid-item-2">Фиксированная</label>
+            <input type="radio" name="grid" value="Фиксированная" id="grid-item-2">
+            <label for="grid-item-3">Резиновая</label>
+            <input type="radio" name="grid" value="Резиновая" id="grid-item-3">
+          </fieldset>
+          <fieldset>
+            <legend class="sidebar-title">Особенности:</legend>
+            <label for="features-item-1">Слайдер</label>
+            <input type="checkbox" name="features" id="features-item-1">
+            <label for="features-item-2">Блок приемуществ</label>
+            <input type="checkbox" name="features" id="features-item-2">
+            <label for="features-item-3">Новости</label>
+            <input type="checkbox" name="features" id="features-item-3">
+            <label for="features-item-4">Галерея</label>
+            <input type="checkbox" name="features" id="features-item-4">
+            <label for="features-item-5">Корзина</label>
+            <input type="checkbox" name="features" id="features-item-5">
+          </fieldset>
+          <button type="submit" class="sidebar-btn">Показать</button>
         </form>
-        </div>    
-      <div class="contacts">
-        <section class="contacts-adress">
-          <img src="img/index/map-1.jpg" width="1199" height="416" alt="">
+      </div>      
+    </main>
+    <footer class="main-footer">
+     <img class="main-footer-map" src="img/index/map-1.jpg" width="100%"  height="416" alt="">
+      <div class="container">
+       <!--<div class="contacts-adress">Удалил блок адрес. Не знаю как его разместить под картой
+      чтобы он еще центровался.          
           <h2>NERDS Design Studio</h2>
           191186, Санкт-петербург<br>
           ул.Б.Коннюшенная, д.19/8
           тел.+7(812)275-75-75
-          </section>
-      </div>
-    </main>
-        <footer class="main-footer">
-      <div class="container">       
-          <div class="footer-content-left">
-            <div class="footer-content-social">
-          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-            </div>
+        </div>!-->
+        <div class="footer-content-left">
+          <div class="footer-content-social">
+            <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+            <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+            <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+          </div>
         </div>
         <div class="footer-content-right">
           <div class="footer-content-aside">
@@ -139,7 +133,7 @@
             <p>Скидка 10% для друзей из социальных сетей</p>
           </div>
         </div>
-        </div>      
-    </footer>  
+      </div>
+    </footer>
   </body>
 </html>
