--- a/index.html
+++ b/index.html
@@ -7,145 +7,149 @@
     <title>Нёрдс</title>
   </head>
   <body>
-      <header class="main-header">
+    <header class="main-header">
       <div class="container clearfix">
-      <div class="index-logo">
-            <a href="#">
-            <img src="img/index/logo.png" width="139" height="56" alt="Логотип"></a>            
-          </div>
-      	 <nav class="main-navigation">      	 	
-      	 <ul>
-            <li><a href="#">Студия</a></li>             
-            <li><a href="#">Клиенты</a></li>             
-            <li><a href="#">Магазин</a></li>             
-            <li><a href="#">Контакты</a></li>             
-          </ul>         
-          </nav>
+        <div class="index-logo">
+          <a href="#">
+          <img src="img/index/logo.png" width="139" height="56" alt="Логотип"></a>            
+        </div>
+        <nav class="main-navigation">
+          <ul>
+            <li><a href="#">Студия</a></li>
+            <li><a href="#">Клиенты</a></li>
+            <li><a href="#">Магазин</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+        </nav>
         <div class="user-block">
           <a class="basket" href="#">Корзина</a>
-        </div>        
+        </div>
       </div>
-      </header> 
-       <main class="container">
-       	<div class="slider">
-          <div class="slider-content clearfix">
-            <div class="slider-content-left">
-              <span class="slider-slogan">
-                Долго,дорого,скрупулезно
-              </span>
-              <p>Математически выверенный дизайн<br>
-                для вашего сайта или мобильного приложения.
-              </p>
-              <a href="#">Узнать больше</a>
+    </header>
+    <main class="container">
+      <div class="slider">
+        <div class="slider-content clearfix">
+          <div class="slider-content-left">
+            <span class="slider-slogan">
+            Долго,дорого,скрупулезно
+            </span>
+            <p>Математически выверенный дизайн<br>
+              для вашего сайта или мобильного приложения.
+            </p>
+            <a href="#">Узнать больше</a>
+          </div>
+          <div class="slider-content-right">
+            <figure class="slider-image">
+              <img src="img/index/slider-1.png" width="338" height="231" alt="">
+            </figure>
+          </div>
+        </div>
+      </div>
+      <section class="features clearfix">
+        <div class="features-item">
+          <div class="features-image">
+            <img src="img/index/Layer-1.jpg" width="240" height="124" alt="">
+          </div>
+          <b class="features-name">Веб-сайты</b>
+          <p class="features-desc">Мир никогда не будет прежним<br>
+            после того как вы увидите наш сайт!
+          </p>
+          <a class="features-anchor" href="#">Заказать</a>
+        </div>
+        <div class="features-item">
+          <div class="features-image">
+            <img src="img/index/Layer-2.jpg" width="240" height="124" alt="">
+          </div>
+          <b class="features-name">Приложения</b>
+          <p class="features-desc">Покорите топ-10 приложений<br>
+            в AppStore и Google Play
+          </p>
+          <a class="features-anchor" href="#">Заказать</a>
+        </div>
+        <div class="features-item">
+          <div class="features-image">
+            <img src="img/index/Layer-3.jpg" width="240" height="124" alt="">
+          </div>
+          <b class="features-name">Презентации</b>
+          <p class="features-desc">Вы даже не подозреваете<br>
+            насколько вы изумительны
+          </p>
+          <a class="features-anchor" href="#">Заказать</a>
+        </div>
+      </section>
+      <section class="about-company clearfix">
+        <div class="about-company-content">
+          <div class="about-company-content-left">
+            <span class="slogan">Мы-мальнькая,но гордая<br>
+            дизайн-студия из Краснодара.
+            </span>
+            <p class="about-company-desc">Исповедуем принципы минимализма и чистоты.Ставим математический<br>
+              расчет выше креатива.Работаем не покладая рук,как роботы.
+            </p>
+          </div>
+          <div class="about-company-content-right">
+            <div class="about-company-logo">
+              <img src="img/index/logo-1.png" width="187" height="75" alt="">
             </div>
-            <div class="slider-content-right">
-              <figure class="slider-image">
-                <img src="img/index/slider-1.png" width="338" height="231" alt="">
-              </figure>             
-            </div>
-          </div>   
-       	</div>
-       	<section class="features clearfix">
-       		<div class="features-item">
-       		<div class="features-image">
-       			<img src="img/index/Layer-1.jpg" width="290" height="124" alt="">
-       		</div>
-       		<b class="features-name">Веб-сайты</b>
-       		<p class="features-desc">Мир никогда не будет прежним<br>
-       			после того как вы увидите наш сайт!</p>
-       			<a class="features-anchor" href="#">Заказать</a>
-       		</div>
-       		<div class="features-item">
-       		<div class="features-image">
-       			<img src="img/index/Layer-2.jpg" width="290" height="124" alt="">
-       		</div>
-       		<b class="features-name">Приложения</b>
-       		<p class="features-desc">Покорите топ-10 приложений<br>
-       			в AppStore и Google Play</p>       		
-       			<a class="features-anchor" href="#">Заказать</a>
-       		</div>
-       		<div class="features-item">
-       		<div class="features-image">
-       			<img src="img/index/Layer-3.jpg" width="290" height="124" alt="">
-       		</div>
-       		<b class="features-name">Презентации</b>
-       		<p class="features-desc">Вы даже не подозреваете<br>
-       			насколько вы изумительны</p>       		
-       			<a class="features-anchor" href="#">Заказать</a>
-       		</div>
-       	</section>
-       	<section class="about-company clearfix">
-       		<div class="about-company-content">
-       			<div class="about-company-content-left">
-       				<span class="slogan">Мы-мальнькая,но гордая<br>
-       					дизайн-студия из Краснодара.
-       				</span>
-       				<p class="about-company-desc">Исповедуем принципы минимализма и чистоты.Ставим математический<br>
-       					расчет выше креатива.Работаем не покладая рук,как роботы.</p>
-       			</div>
-       			<div class="about-company-content-right">
-       				<div class="about-company-logo">
-       					<img src="img/index/logo-1.png" width="187" height="75" alt="">
-       				</div>
-       			</div>
-       		</div>
-       		<div class="aside clearfix">       			
-       			<div class="aside-content-left">
-       				<h2 class="aside-content-title">Выполняем заказы на разработку:</h2>
-       				<ul>
-       					<li>Веб сайтов любой сложности</li>       					
-       					<li>Мобильных приложений для IOS и Android</li>       					
-       					<li>Слайдшоу и видео для корпоративных презинтаций</li>       					
-       				</ul>
-       			</div>
-
-       			<div class="aside-content-right">
-       				<h2 class="aside-content-title">Как мы работаем:</h2>
-       				<ul>
-       					<li>С самоотдачей 146%</li>       					
-       					<li>Соблюдая сроки на 100%</li>       					
-       					<li>По предоплате 50%</li>       					
-       				</ul>
-       			</div>       		
-       		</div>
-       	</section>
+          </div>
+        </div>
+        <div class="aside clearfix">
+          <div class="aside-content-left">
+            <h2 class="aside-content-title">Выполняем заказы на разработку:</h2>
+            <ul>
+              <li>Веб сайтов любой сложности</li>
+              <li>Мобильных приложений для IOS и Android</li>
+              <li>Слайдшоу и видео для корпоративных презинтаций</li>
+            </ul>
+          </div>
+          <div class="aside-content-right">
+            <h2 class="aside-content-title">Как мы работаем:</h2>
+            <ul>
+              <li>С самоотдачей 146%</li>
+              <li>Соблюдая сроки на 100%</li>
+              <li>По предоплате 50%</li>
+            </ul>
+          </div>
+        </div>
+      </section>
       <div class="gallery ">
-      	<ul class="gallery-list">
-      		<li class="gallery-item">
-      			<a href="#"><img src="img/index/partner-1.png" width="198" height="37" alt=""></a></li>      		
-      		<li class="gallery-item">
-      			<a href="#"><img src="img/index/partner-2.png" width="199" height="68" alt=""></a></li>      		
-      		<li class="gallery-item">
-      			<a href="#"><img src="img/index/partner-3.png" width="209" height="86" alt=""></a></li>
-      		
-      	</ul>
-      </div>
-      <div class="contacts">
-      	<section class="contacts-adress">
-          <img src="img/index/map-1.jpg" width="1199" height="416" alt="">
-      		<h2>NERDS Design Studio</h2>
-      		191186, Санкт-петербург<br>
-      		ул.Б.Коннюшенная, д.19/8
-      		тел.+7(812)275-75-75
-      		</section>
-      </div>
+        <ul class="gallery-list">
+          <li class="gallery-item">
+            <a href="#"><img src="img/index/partner-1.png" width="198" height="37" alt=""></a>
+          </li>
+          <li class="gallery-item">
+            <a href="#"><img src="img/index/partner-2.png" width="199" height="68" alt=""></a>
+          </li>
+          <li class="gallery-item">
+            <a href="#"><img src="img/index/partner-3.png" width="209" height="86" alt=""></a>
+          </li>
+        </ul>
+      </div>     
     </main>
     <footer class="main-footer clearfix">
-      <div class="container">      	
-      		<div class="footer-content-left">
-      			<div class="footer-content-social">
-      	  <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-      			</div>
-      	</div>
-      	<div class="footer-content-right">
-      		<div class="footer-content-aside">
-      			<span>Давайте дружить,это выгодно</span>
-      			<p>Скидка 10% для друзей из социальных сетей</p>
-      		</div>
-      	</div>
-        </div>      
-    </footer>  
+     <img class="main-footer-map" src="img/index/map-1.jpg" width="100%"  height="416" alt="">
+      <div class="container">
+      <!--<div class="contacts-adress">Удалил блок адрес. Не знаю как его разместить под картой
+      чтобы он еще центровался.          
+          <h2>NERDS Design Studio</h2>
+          191186, Санкт-петербург<br>
+          ул.Б.Коннюшенная, д.19/8
+          тел.+7(812)275-75-75
+        </div>!-->
+        <div class="footer-content-left">
+          <div class="footer-content-social">
+            <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+            <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+            <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+          </div>
+        </div>
+        <div class="footer-content-right">
+          <div class="footer-content-aside">
+            <span>Давайте дружить,это выгодно</span>
+            <p>Скидка 10% для друзей из социальных сетей</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
