--- a/index.html
+++ b/index.html
@@ -128,14 +128,13 @@
     </main>
     <footer class="main-footer clearfix">
      <img class="main-footer-map" src="img/index/map-1.jpg" width="100%"  height="416" alt="">
-      <div class="container">
-      <!--<div class="contacts-adress">Удалил блок адрес. Не знаю как его разместить под картой
-      чтобы он еще центровался.          
+      <div class="contacts-adress">                
           <h2>NERDS Design Studio</h2>
           191186, Санкт-петербург<br>
           ул.Б.Коннюшенная, д.19/8
           тел.+7(812)275-75-75
-        </div>!-->
+        </div>
+      <div class="container">     
         <div class="footer-content-left">
           <div class="footer-content-social">
             <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
