--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&subset=cyrillic" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <title>Нёрдс</title>
   </head>
@@ -11,7 +11,7 @@
       <div class="container clearfix">
         <div class="index-logo">
           <a href="#">
-          <img src="img/index/logo.png" width="139" height="56" alt="Логотип"></a>            
+          <img class="index-logo-img" src="img/index/logo.png" width="139" height="56" alt="Логотип"></a>         
         </div>
         <nav class="main-navigation">
           <ul>
@@ -128,12 +128,12 @@
     </main>
     <footer class="main-footer clearfix">
      <img class="main-footer-map" src="img/index/map-1.jpg" width="100%"  height="416" alt="">
-      <div class="contacts-adress">                
+      <!--<div class="contacts-adress">                
           <h2>NERDS Design Studio</h2>
           191186, Санкт-петербург<br>
           ул.Б.Коннюшенная, д.19/8
           тел.+7(812)275-75-75
-        </div>
+        </div>!-->
       <div class="container">     
         <div class="footer-content-left">
           <div class="footer-content-social">
