--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
       <div class="slider">
         <div class="slider-content clearfix">
           <div class="slider-content-left">
-            <span class="slider-slogan">
-            Долго,дорого,скрупулезно
-            </span>
+            <div class="slider-slogan">
+            Долго, дорого,<br>скрупулезно
+            </div>
             <p>Математически выверенный дизайн<br>
               для вашего сайта или мобильного приложения.
             </p>
-            <a href="#">Узнать больше</a>
+            <a class="more" href="#">Узнать больше</a>
           </div>
           <div class="slider-content-right">
-            <figure class="slider-image">
-              <img src="img/index/slider-1.png" width="338" height="231" alt="">
-            </figure>
+            <!--<div class="slider-logo">
+              <img class="slider-logo-img" src="img/index/slider-1.png" width="338" height="231" alt="">
+            </div>!-->
           </div>
         </div>
       </div>
@@ -50,31 +50,31 @@
           <div class="features-image">
             <img src="img/index/Layer-1.jpg" width="240" height="124" alt="">
           </div>
-          <b class="features-name">Веб-сайты</b>
+          <h2 class="features-name">Веб-сайты</h2>
           <p class="features-desc">Мир никогда не будет прежним<br>
             после того как вы увидите наш сайт!
           </p>
-          <a class="features-anchor" href="#">Заказать</a>
+          <a class="features-anchor type-1" href="#">Заказать</a>
         </div>
         <div class="features-item">
           <div class="features-image">
             <img src="img/index/Layer-2.jpg" width="240" height="124" alt="">
           </div>
-          <b class="features-name">Приложения</b>
+          <h2 class="features-name">Приложения</h2>
           <p class="features-desc">Покорите топ-10 приложений<br>
             в AppStore и Google Play
           </p>
-          <a class="features-anchor" href="#">Заказать</a>
+          <a class="features-anchor features-anchor-2" href="#">Заказать</a>
         </div>
         <div class="features-item">
           <div class="features-image">
             <img src="img/index/Layer-3.jpg" width="240" height="124" alt="">
           </div>
-          <b class="features-name">Презентации</b>
+          <h2 class="features-name">Презентации</h2>
           <p class="features-desc">Вы даже не подозреваете<br>
             насколько вы изумительны
           </p>
-          <a class="features-anchor" href="#">Заказать</a>
+          <a class="features-anchor type-3" href="#">Заказать</a>
         </div>
       </section>
       <section class="about-company clearfix">
