--- a/index.html
+++ b/index.html
@@ -80,21 +80,13 @@
       <section class="about-company clearfix">
         <div class="about-company-content">
           <div class="about-company-content-left">
-            <span class="slogan">Мы-мальнькая,но гордая<br>
+            <div class="about-company-slogan">Мы-мальнькая,но гордая<br>
             дизайн-студия из Краснодара.
-            </span>
+            </div>
             <p class="about-company-desc">Исповедуем принципы минимализма и чистоты.Ставим математический<br>
               расчет выше креатива.Работаем не покладая рук,как роботы.
             </p>
-          </div>
-          <div class="about-company-content-right">
-            <div class="about-company-logo">
-              <img src="img/index/logo-1.png" width="187" height="75" alt="">
-            </div>
-          </div>
-        </div>
-        <div class="aside clearfix">
-          <div class="aside-content-left">
+            <div class="aside-content-left">
             <h2 class="aside-content-title">Выполняем заказы на разработку:</h2>
             <ul>
               <li>Веб сайтов любой сложности</li>
@@ -102,7 +94,13 @@
               <li>Слайдшоу и видео для корпоративных презинтаций</li>
             </ul>
           </div>
-          <div class="aside-content-right">
+          </div>
+          <div class="about-company-content-right">
+            <div class="about-company-logo">
+              <img src="img/index/logo-1.png" width="187" height="75" alt="">
+            </div>
+            <p>since 2004</p>
+              <div class="aside-content-right">
             <h2 class="aside-content-title">Как мы работаем:</h2>
             <ul>
               <li>С самоотдачей 146%</li>
@@ -110,6 +108,8 @@
               <li>По предоплате 50%</li>
             </ul>
           </div>
+          </div>
+        </div>               
         </div>
       </section>
       <div class="gallery ">
