промежуточный вариант (не все готово)

--- a/index.html
+++ b/index.html
@@ -74,21 +74,23 @@
           <p class="features-desc">Вы даже не подозреваете<br>
             насколько вы изумительны
           </p>
-          <a class="features-anchor type-3" href="#">Заказать</a>
+          <a class="features-anchor btn-2" href="#">Заказать</a>
         </div>
       </section>
       <section class="about-company clearfix">
         <div class="about-company-content">
           <div class="about-company-content-left">
+          <div class="about-container-left">
             <div class="about-company-slogan">Мы-мальнькая,но гордая<br>
             дизайн-студия из Краснодара.
             </div>
             <p class="about-company-desc">Исповедуем принципы минимализма и чистоты.Ставим математический<br>
               расчет выше креатива.Работаем не покладая рук,как роботы.
             </p>
+            </div>
             <div class="aside-content-left">
             <h2 class="aside-content-title">Выполняем заказы на разработку:</h2>
-            <ul>
+            <ul class="aside-menu">
               <li>Веб сайтов любой сложности</li>
               <li>Мобильных приложений для IOS и Android</li>
               <li>Слайдшоу и видео для корпоративных презинтаций</li>
@@ -96,13 +98,15 @@
           </div>
           </div>
           <div class="about-company-content-right">
+          <div class="about-container-right">
             <div class="about-company-logo">
               <img src="img/index/logo-1.png" width="187" height="75" alt="">
             </div>
             <p>since 2004</p>
+            </div>
               <div class="aside-content-right">
             <h2 class="aside-content-title">Как мы работаем:</h2>
-            <ul>
+            <ul class="aside-menu">
               <li>С самоотдачей 146%</li>
               <li>Соблюдая сроки на 100%</li>
               <li>По предоплате 50%</li>
@@ -112,18 +116,10 @@
         </div>               
         </div>
       </section>
-      <div class="gallery ">
-        <ul class="gallery-list">
-          <li class="gallery-item">
-            <a href="#"><img src="img/index/partner-1.png" width="198" height="37" alt=""></a>
-          </li>
-          <li class="gallery-item">
-            <a href="#"><img src="img/index/partner-2.png" width="199" height="68" alt=""></a>
-          </li>
-          <li class="gallery-item">
-            <a href="#"><img src="img/index/partner-3.png" width="209" height="86" alt=""></a>
-          </li>
-        </ul>
+      <div class="gallery ">          
+            <a href="#"><img src="img/index/partner-1.png" width="198" height="37" alt=""></a>         
+            <a href="#"><img src="img/index/partner-2.png" width="199" height="68" alt=""></a>          
+            <a href="#"><img src="img/index/partner-3.png" width="209" height="86" alt=""></a>                  
       </div>     
     </main>
     <footer class="main-footer clearfix">
@@ -144,7 +140,7 @@
         </div>
         <div class="footer-content-right">
           <div class="footer-content-aside">
-            <span>Давайте дружить,это выгодно</span>
+            <span class="footer-slogan">Давайте дружить,это выгодно</span>
             <p>Скидка 10% для друзей из социальных сетей</p>
           </div>
         </div>
