Кривая разметка главной

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <p class="features-desc">Мир никогда не будет прежним<br>
             после того как вы увидите наш сайт!
           </p>
-          <a class="features-anchor type-1" href="#">Заказать</a>
+          <a class="features-anchor anchor-1" href="#">Заказать</a>
         </div>
         <div class="features-item">
           <div class="features-image">
@@ -64,7 +64,7 @@
           <p class="features-desc">Покорите топ-10 приложений<br>
             в AppStore и Google Play
           </p>
-          <a class="features-anchor features-anchor-2" href="#">Заказать</a>
+          <a class="features-anchor anchor-2" href="#">Заказать</a>
         </div>
         <div class="features-item">
           <div class="features-image">
@@ -74,7 +74,7 @@
           <p class="features-desc">Вы даже не подозреваете<br>
             насколько вы изумительны
           </p>
-          <a class="features-anchor btn-2" href="#">Заказать</a>
+          <a class="features-anchor anchor-3" href="#">Заказать</a>
         </div>
       </section>
       <section class="about-company clearfix">
@@ -101,8 +101,7 @@
           <div class="about-container-right">
             <div class="about-company-logo">
               <img src="img/index/logo-1.png" width="187" height="75" alt="">
-            </div>
-            <p>since 2004</p>
+            </div>                    
             </div>
               <div class="aside-content-right">
             <h2 class="aside-content-title">Как мы работаем:</h2>
