каталог (промежуточный вариант)

--- a/catalog.html
+++ b/catalog.html
@@ -29,9 +29,9 @@
     </header>
     <main class="container clearfix">
       <div class="catalog">
-        <div class="catalog-filter">
-          <b class="catalog-filter-title">Сортировать:</b>
+        <div class="catalog-filter">         
           <ul>
+            <li><b>Сортировать:</b></li>
             <li><a href="#">По цене</a></li>
             <li><a href="#">По типу</a></li>
             <li><a href="#">По функционалу</a></li>
