--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
             <div class="aside-content-left">
             <h2 class="aside-content-title">Выполняем заказы на разработку:</h2>
             <ul class="aside-menu">
-              <li>Веб сайтов любой сложности</li>
-              <li>Мобильных приложений для IOS и Android</li>
-              <li>Слайдшоу и видео для корпоративных презинтаций</li>
+              <li class="aside-item">Веб сайтов любой сложности</li>
+              <li class="aside-item">Мобильных приложений для IOS и Android</li>
+              <li class="aside-item">Слайдшоу и видео для корпоративных презинтаций</li>
             </ul>
           </div>
           </div>
@@ -101,14 +101,15 @@
           <div class="about-container-right">
             <div class="about-company-logo">
               <img src="img/index/logo-1.png" width="187" height="75" alt="">
-            </div>                    
+            </div>
+            <div class="about-company-since">SINCE 2004</div>                    
             </div>
               <div class="aside-content-right">
             <h2 class="aside-content-title">Как мы работаем:</h2>
             <ul class="aside-menu">
-              <li>С самоотдачей 146%</li>
-              <li>Соблюдая сроки на 100%</li>
-              <li>По предоплате 50%</li>
+              <li class="aside-item">С самоотдачей 146%</li>
+              <li class="aside-item">Соблюдая сроки на 100%</li>
+              <li class="aside-item">По предоплате 50%</li>
             </ul>
           </div>
           </div>
