--- a/catalog.html
+++ b/catalog.html
@@ -73,7 +73,7 @@
           <a href="#" class="catalog-btn" >1</a>
           <a href="#" class="catalog-btn" >2</a>
           <a href="#" class="catalog-btn" >3</a>
-          <a href="#" class="catalog-btn" >Следующая</a>
+          <a href="#" class="catalog-btn catalog-next" >Следующая</a>
         </div>
       </div>
       <div class="sidebar">
